fixed the alignment of video caption in culture page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,12 +240,13 @@ a:focus {
 /* Home Page */
 
 
-.iran-landscape {
-	object-fit: cover;
+div header img {
+	display: block;
+	max-width: 100%;
+	width: 100%;
+	object-fit: fill;
 	min-height: 8rem;
 	max-height: 28rem;
-	width: 100%;
-	padding: 0;
 
 }
 
@@ -261,7 +262,7 @@ a:focus {
 
 	margin: auto;
 	max-width: 85%;
-	width: 85%;
+	width: 100%;
 }
 
 @media (min-width: 50em) {
@@ -415,16 +416,7 @@ h2 {
 
 }
 
-/* .tehran {
-	position: relative;
 
-}
-
-.tehran-info {
-
-	position: absolute;
-	bottom: 20rem;
-} */
 
 h3 {
 	margin-top: 0;
@@ -441,11 +433,20 @@ h3 {
 
 }
 
+/* 
+video {
+	display: block;
+	margin: 0 auto;
+	width: 17rem;
+} */
 
 .tehran {
-	padding: 1rem;
-	margin: .5rem;
-	width: 17rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0;
+	flex-wrap: nowrap;
+	padding: 0;
 }
 
 blockquote {
